modifications done as per request

--- a/IBBTradeValuation/test-output/old/Default suite/methods.html
+++ b/IBBTradeValuation/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f8bee4">  <td>20/04/06 15:41:29</td>   <td>0</td> <td title="&gt;&gt;BaseClass.APKFIleAvailability()[pri:0, instance:mainTestcases.BasicDetails@631330c]">&gt;&gt;APKFIleAvailability</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>20/04/06 15:41:29</td>   <td>68</td> <td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:mainTestcases.BasicDetails@631330c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>20/04/06 15:41:45</td>   <td>16193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseClass.login()[pri:0, instance:mainTestcases.BasicDetails@631330c]">login</td> 
-  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="aba872">  <td>20/04/06 15:41:57</td>   <td>28091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BasicDetails.basicDetails(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:mainTestcases.BasicDetails@631330c]">basicDetails</td> 
-  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>20/04/06 15:42:26</td>   <td>56330</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TestcaseEnd()[pri:0, instance:mainTestcases.BasicDetails@631330c]">&lt;&lt;TestcaseEnd</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
-<tr bgcolor="f8bee4">  <td>20/04/06 15:42:26</td>   <td>56376</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:mainTestcases.BasicDetails@631330c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@192794887</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/04/06 19:12:23</td>   <td>0</td> <td title="&gt;&gt;BaseClass.APKFIleAvailability()[pri:0, instance:mainTestcases.Dashboard@2353b3e6]">&gt;&gt;APKFIleAvailability</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@110431793</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/04/06 19:12:23</td>   <td>66</td> <td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:mainTestcases.Dashboard@2353b3e6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@110431793</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/04/06 19:12:38</td>   <td>14812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BaseClass.login()[pri:0, instance:mainTestcases.Dashboard@2353b3e6]">login</td> 
+  <td>main@110431793</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/06 19:12:49</td>   <td>26002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dashboard.dashboard()[pri:0, instance:mainTestcases.Dashboard@2353b3e6]">dashboard</td> 
+  <td>main@110431793</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/04/06 19:13:03</td>   <td>40657</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.TestcaseEnd()[pri:0, instance:mainTestcases.Dashboard@2353b3e6]">&lt;&lt;TestcaseEnd</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@110431793</td>   <td></td> </tr>
+<tr bgcolor="f8bee4">  <td>20/04/06 19:13:03</td>   <td>40679</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:mainTestcases.Dashboard@2353b3e6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@110431793</td>   <td></td> </tr>
 </table>
